feat: modal comment: header-main: homepage banner

--- a/client/src/components/header.html
+++ b/client/src/components/header.html
@@ -14,93 +14,93 @@
         <div class="container-fluid" aria-label="Restaurant review system application" role="application">
           <header class="row">
 
-    <!--  Main navigation with some accessibility --> 
-
-            <nav
-              class="
-                navbar navbar-expand-lg navbar-light
-                bg-light
-                d-flex
-                nav-pills 
-                w-100
-              " 
-            >
-            
-            <div class="d-flex flex-row col-lg-2 col-12 justify-content-between " >
-
-              <a class="navbar-brand" href="../index.html">Restaurant System</a>
-              <button
-                class="navbar-toggler"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbar_menu-actions"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-
-            </div>
+            <!--  Main navigation with some accessibility --> 
         
-
-              <div class="collapse navbar-collapse mt-2 mt-lg-0 w-100 justify-content-center " id="navbar_menu-actions">
+                    <nav
+                      class="
+                        navbar navbar-expand-lg navbar-light
+                        bg-light
+                        d-flex
+                        nav-pills 
+                        w-100
+                      " 
+                    >
+                    
+                    <div class="d-flex flex-row col-lg-2 col-12 justify-content-between " >
+        
+                      <a class="navbar-brand" href="../index.html">Restaurant System</a>
+                      <button
+                        class="navbar-toggler"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#navbar_menu-actions"
+                      >
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
+        
+                    </div>
                 
-                <div class="navbar-nav col-lg-6  w-100 justify-content-center" aria-label="nav bar list" role="navigation">
-                  <div class="nav-item col-lg-2 col-12 ">
-                    <a class="btn active text-light w-100 btn-outline-dark rounded-0" aria-current="true" href="../review.html">Review </a>
-                  </div>
-
-                <!-- dropdown menu for account actions--> 
-
-
-                  <div class="dropdown col-lg-4 col-12 " id="account-actions-menu" aria-label="account actions drop dowm" role="menu">
-                    <button class="btn btn-outline-dark rounded-0 dropdown-toggle w-100" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Account actions
-                    </button>
-
-                    <div class="dropdown-menu w-100" aria-labelledby="account-actions-menu">
-
-                
-                  <div class="dropdown-item col-lg-4  col-12">
-                    <button class="btn  w-100 btn-outline-dark rounded-0"  type="button" data-toggle="modal" data-target="#sign-out_modal">Add business</button>
-                  </div>
-                  
-                  <div class="dropdown-item col-lg-4  col-12">
-                    <button class="btn w-100 btn-outline-dark rounded-0" type="button" data-toggle="modal" data-target="#sign-up_modal">Sign up</button>
-
-                  </div>
-
-                
-                  <div class="dropdown-item col-lg-4  col-12">
-                    <button class="btn  w-100 btn-outline-dark rounded-0"  type="button" data-toggle="modal" data-target="#Login_modal">Login</button>
-                  </div>   
-                  <div class="dropdown-item col-lg-4  col-12">
-                    <button class="btn w-100 btn-outline-dark rounded-0" type="button" data-toggle="modal" data-target="#sign-out_modal">Sign out</button>
-                
-                  </div>
-                  </div>
-                </div>
-                  <div class="nav-item col-lg-2 col-12">
-                    <a class="btn w-100 btn-outline-dark rounded-0"  href="../help.html">Help </a>
-                  </div>
-                
-                
-                </div>
-
-            
-              </div>
-                <!--  Search bar for finding restaurants --> 
-              <form class="form-inline d-flex flex-row col-lg-4 col-12 mt-lg-0 mt-1 " aria-label="search by name section" role="search">
-                <label for="main-search" class="d-none">Restaurant search name </label>
-                <input
-                id = "main-search"
-                  class="form-control rounded-0 rounded-0 rounded-start " 
-                  type="search"
-                placeholder="Restaurant Search by name"
-                  aria-label="Enter a restaurant name"
-                />
-                <button class="btn btn-dark rounded-0 rounded-end" type="submit">Search</button>
-                </form>
-            </nav>
-
-          </header>
+        
+                      <div class="collapse navbar-collapse mt-2 mt-lg-0 w-100 justify-content-center " id="navbar_menu-actions">
+                        
+                        <div class="navbar-nav col-lg-6  w-100 justify-content-center" aria-label="nav bar list" role="navigation">
+                          <div class="nav-item col-lg-2 col-12 ">
+                            <a class="btn active text-light w-100 btn-outline-dark rounded-0" aria-current="true" href="../review.html">Review </a>
+                          </div>
+        
+                        <!-- dropdown menu for account actions--> 
+        
+        
+                          <div class="dropdown col-lg-4 col-12 " id="account-actions-menu" aria-label="account actions dropdowm" role="menu">
+                            <button class="btn btn-outline-dark rounded-0 dropdown-toggle w-100" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Account actions
+                            </button>
+        
+                            <div class="dropdown-menu w-100" aria-labelledby="account-actions-menu">
+        
+                        
+                          <div class="dropdown-item col-lg-4  col-12">
+                            <button class="btn  w-100 btn-outline-dark rounded-0"  type="button" data-bs-toggle="modal" data-bs-target="#add_business_modal">Add business</button>
+                          </div>
+                          
+                          <div class="dropdown-item col-lg-4  col-12">
+                            <button class="btn w-100 btn-outline-dark rounded-0" type="button" data-bs-toggle="modal" data-bs-target="#sign-up_modal">Sign up</button>
+        
+                          </div>
+        
+                        
+                          <div class="dropdown-item col-lg-4  col-12">
+                            <button class="btn  w-100 btn-outline-dark rounded-0"  type="button" data-bs-toggle="modal" data-bs-target="#Login_modal">Login</button>
+                          </div>   
+                          <div class="dropdown-item col-lg-4  col-12">
+                            <button class="btn w-100 btn-outline-dark rounded-0" type="button" data-bs-toggle="modal" data-bs-target="#sign-out_modal">Sign out</button>
+                        
+                          </div>
+                          </div>
+                        </div>
+                          <div class="nav-item col-lg-2 col-12">
+                            <a class="btn w-100 btn-outline-dark rounded-0"  href="../help.html">Help </a>
+                          </div>
+                        
+                        
+                        </div>
+        
+                    
+                      </div>
+                        <!--  Search bar for finding restaurants --> 
+                      <form class="form-inline d-flex flex-row col-lg-4 col-12 mt-lg-0 mt-1 " aria-label="search by name section" role="search">
+                        <label for="main-search" class="d-none">Restaurant search name </label>
+                        <input
+                        id = "main-search"
+                          class="form-control rounded-0 rounded-0 rounded-start " 
+                          type="search"
+                        placeholder="Restaurant search name"
+                          aria-label="Enter a restaurant name"
+                        />
+                        <button class="btn btn-dark rounded-0 rounded-end" type="submit">Search</button>
+                        </form>
+                    </nav>
+        
+        </header>
         </div>
         <script src="../js/jscript.js"></script>
 
