--- a/client/src/components/sign-up-modal.html
+++ b/client/src/components/sign-up-modal.html
@@ -1,17 +1,17 @@
-<!-- header component with dependencies --> 
+ <!-- header component with dependencies --> 
 
-<!DOCTYPE html>
-<html lang="en-gb">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>title</title>
-    <link rel="stylesheet" href="../css/bootstrap.css" type="text/css" />
-    <script src="../js/jquery-3.6.0.js"></script>
-    <script src="../js/bootstrap.bundle.js"></script>
-  </head>
-  <body>
-    <div class="container-fluid" aria-label="Restaurant review system application" role="application">
+ <!DOCTYPE html>
+ <html lang="en-gb">
+   <head>
+     <meta charset="UTF-8" />
+     <meta name="viewport" content="width=device-width,initial-scale=1" />
+     <title>title</title>
+     <link rel="stylesheet" href="../css/bootstrap.css" type="text/css" />
+     <script src="../js/jquery-3.6.0.js"></script>
+     <script src="../js/bootstrap.bundle.js"></script>
+   </head>
+   <body>
+     <div class="container-fluid" aria-label="Restaurant review system application" role="application">
       <header class="row">
 
         <!--  Main navigation with some accessibility --> 
@@ -101,36 +101,83 @@
                 </nav>
     
     </header>
-  
-    <main class = "row d-flex flex-column align-self-center align-items-center bg-secondary p-1 justify-content-start  min-vh-100">
-             
-      <!--  banner general--> 
-      <div class=" bg-light p-1  col-12 col-sm-12  align-self-center align-items-center  mt-5 " aria-label="banner" role="banner">
-        <header class="d-flex flex-column col-12 p-1 align-self-center align-items-center">
-    
-            <h1 class="display-4 bg-black text-light text-center col-12 p-2">[Insert title]</h1>
-    
-            <h6 class="bg-secondary text-light text-center col-10 p-1" aria-label="Welcome login message" >Welcome user[insert username] or Guest</h6> 
-    
-        </header>    
-    </div>
-    
-        <!--  home general--> 
-        <div class="d-flex bg-light p-1  col-12 mt-5 flex-column" aria-label="banner" role="banner">
-          <header class="d-flex flex-column col-12 p-1 align-self-center align-items-center">
-              <h1 class="display-4 bg-black text-light p-2 text-center col-12 fw-bold">Restaurant Review System</h1>
-              <h6 class="bg-secondary text-light text-center col-10 p-1">Welcome user[insert username] or Guest</h6> 
-    
-           </header>
-    
-          <p class="lead display-6 bg-black text-light p-1 text-center col-10 align-self-center">Create and read reviews </p>
-    
-      </div>
+       <main class = "row d-flex flex-column align-self-center align-items-center bg-secondary p-1 justify-content-center ">
               
-     </main>
-    </div>
-    <script src="../js/jscript.js"></script>
+         <!--  banner general--> 
+         <div class=" bg-light p-1  col-12 col-sm-12  align-self-center align-items-center" aria-label="banner" role="banner">
+           <header class="d-flex flex-column col-12 p-1 align-self-center align-items-center">
+       
+               <h1 class="display-4 bg-black text-light text-center col-12 p-2">[Insert title]</h1>
+       
+               <h6 class="bg-secondary text-light text-center col-10 p-1" aria-label="Welcome login message" role="Welcome">Welcome user[insert username] or Guest</h6> 
+       
+           </header>    
+       </div>
+       
+           <!-- home page banner --> 
+           <div class="d-flex bg-light p-1  col-12  align-self-center flex-column" aria-label="banner" role="banner">
+               <header class="d-flex flex-column col-12 p-1 align-self-center align-items-center">
+                   <h1 class="display-4 bg-black text-light p-2 text-center col-12 fw-bold">Restaurant Review System</h1>
+                   <h6 class="bg-secondary text-light text-center col-10 p-1">Welcome user[insert username] or Guest</h6> 
+       
+                </header>
+       
+               <p class="lead display-6 bg-black text-light p-1 text-center col-10 align-self-center">Create and read reviews </p>
+       
+           </div>
+                 
+        </main>
+     </div>
+  
+  <!-- Sign up template -->
+  <div class="modal" id="sign-up_modal">
+     <div class="modal-dialog">
+       <div class="modal-content">
+   
+         <div class="modal-header">
+         
+         <button type="button" class="btn btn-dark text-light " data-bs-dismiss="modal">Close
+           </button>
+           <h5 class="modal-title">Sign up</h5>
+           
+         </div>
+ <div class="modal-body col-12 d-flex flex-column ">
 
-  </body>
+          <form class="w-100 d-flex flex-column align-items-center">
+             <label for="username-sign-up" class="d-none m-1">Enter username into text box</label>
+             <input id="username-sign-up"  class="w-100 m-1" name="username-input" type="text"  class="rounded-3" placeholder="Username" type="input" required minlength="1" maxlength="300" >
+             
+             <label for="password-1-sign-up" class="d-none m-1">Enter password into text box</label>
+             <input id="password-1-sign-up" class="w-100 m-1" name="password-input" type="text"   class="rounded-2" placeholder="Enter password" type="input" required minlength="1" maxlength="300" >
+         
+             <label for="password-2-sign-up" class="d-none m-1">Confirm by re-entering password into text box</label>
+             <input id="password-2-sign-up" class="w-100 m-1" name="password-input" type="text"  class="rounded-2" placeholder="Confirm password" type="input" required minlength="1" maxlength="300" >
 
-</html>
+             <button id="submit-sign-up" class="btn btn-dark rounded-0 w-100 m-1 btn-success" type="submit">Submit</button>
+
+         </form>
+
+         <div class="alert alert-success" role="alert">
+          Success: You have created an account
+        </div>
+
+        <div class="alert alert-danger" role="alert">
+          Error: the account already exists
+        </div>
+         </div>
+   
+         <div class="modal-footer">
+              Have an account? <a href="login-modal.html">Login here!</a>
+         </div>
+   
+       </div>
+     </div>
+ 
+     
+   </div>
+   <script src="../js/jscript.js"></script>
+ 
+ </body>
+ 
+ </html>
+ 
