--- a/client/src/components/add-business-modal.html
+++ b/client/src/components/add-business-modal.html
@@ -1,5 +1,4 @@
-    
-<!-- main component with dependencies --> 
+<!-- header component with dependencies -->
 
 <!DOCTYPE html>
 <html lang="en-gb">
@@ -12,17 +11,11 @@
     <script src="../js/bootstrap.bundle.js"></script>
   </head>
   <body>
- <div class="container-fluid" aria-label="Restaurant review system application" role="application">
-        
-        
-        
-
-                              <!--  Main section with some accessibility --> 
-
- <main class = "row d-flex flex-column align-self-center align-items-center bg-secondary p-1 justify-content-center ">
-             
-  <!--  banner general--> 
-  <div class=" bg-light p-1  col-12 col-sm-12  align-self-center align-items-center" aria-label="banner" role="banner">
+    <div
+      class="container-fluid"
+      aria-label="Restaurant review system application"
+      role="application"
+    >
     <header class="row">
 
       <!--  Main navigation with some accessibility --> 
@@ -111,26 +104,153 @@
                   </form>
               </nav>
   
-  </header>   
-</div>
+  </header>
+      <main
+        class="
+          row
+          d-flex
+          flex-column
+          align-self-center align-items-center
+          bg-secondary
+          p-1
+          justify-content-center
+        "
+      >
+        <!--  banner general-->
+        <div
+          class="
+            bg-light
+            p-1
+            col-12 col-sm-12
+            align-self-center align-items-center
+          "
+          aria-label="banner"
+          role="banner"
+        >
+          <header
+            class="
+              d-flex
+              flex-column
+              col-12
+              p-1
+              align-self-center align-items-center
+            "
+          >
+            <h1 class="display-4 bg-black text-light text-center col-12 p-2">
+              [Insert title]
+            </h1>
 
-    <!--  banner general--> 
-    <div class="d-flex bg-light p-1  col-12  align-self-center flex-column" aria-label="banner" role="banner">
-        <header class="d-flex flex-column col-12 p-1 align-self-center align-items-center">
-            <h1 class="display-4 bg-black text-light p-2 text-center col-12 fw-bold">Restaurant Review System</h1>
-            <h6 class="bg-secondary text-light text-center col-10 p-1">Welcome user[insert username] or Guest</h6> 
+            <h6
+              class="bg-secondary text-light text-center col-10 p-1"
+              aria-label="Welcome login message"
+              role="Welcome"
+            >
+              Welcome user[insert username] or Guest
+            </h6>
+          </header>
+        </div>
 
-         </header>
+        <!-- home page banner -->
+        <div
+          class="d-flex bg-light p-1 col-12 align-self-center flex-column"
+          aria-label="banner"
+          role="banner"
+        >
+          <header
+            class="
+              d-flex
+              flex-column
+              col-12
+              p-1
+              align-self-center align-items-center
+            "
+          >
+            <h1
+              class="
+                display-4
+                bg-black
+                text-light
+                p-2
+                text-center
+                col-12
+                fw-bold
+              "
+            >
+              Restaurant Review System
+            </h1>
+            <h6 class="bg-secondary text-light text-center col-10 p-1">
+              Welcome user[insert username] or Guest
+            </h6>
+          </header>
 
-        <p class="lead display-6 bg-black text-light p-1 text-center col-10 align-self-center">Create and read reviews </p>
-
+          <p
+            class="
+              lead
+              display-6
+              bg-black
+              text-light
+              p-1
+              text-center
+              col-10
+              align-self-center
+            "
+          >
+            Create and read reviews
+          </p>
+        </div>
+      </main>
     </div>
+
+    <!-- Add business template -->
+    <div class="modal" id="add-business_modal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button
+              type="button"
+              class="btn btn-dark text-light"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <h5 class="modal-title">Add a business</h5>
+          </div>
+
+          <div class="modal-body col-12 d-flex flex-column ">
+
+            <form class="w-100 d-flex flex-column align-items-center">
+              <label for="create-add-business" class="d-none m-1"
+                >Enter restaurant name into text box</label
+              >
+              <input
+                id="create-add-business"
+                class="w-100 m-1"
+                name="restaurant-input"
+                type="text"
+                placeholder="restaurant name"
+                type="input"
+                required
+                minlength="1"
+                maxlength="300"
+              />
+
+              <button id="submit-create-add-business" class="btn btn-dark rounded-0  w-100 m-1 btn-success" type="submit">Submit</button>
+            </form>
+
+
           
- </main>
 
- </div> 
+            <div class="alert alert-success " role="success alert">
+              Success: You have added a new business to review.
+            </div>
+
+            <div class="alert alert-faliure " role="error alert">
+              Error: Business name wasn't added because it already exists.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="../js/jscript.js"></script>
-
- </body>
-
+  </body>
 </html>
