--- a/client/src/components/header.html
+++ b/client/src/components/header.html
@@ -40,10 +40,10 @@
                     </div>
                 
         
-                      <div class="collapse navbar-collapse mt-2 mt-lg-0 w-100 justify-content-center " id="navbar_menu-actions">
+                      <div class="collapse navbar-collapse mt-2 mt-lg-0   " id="navbar_menu-actions">
                         
-                        <div class="navbar-nav col-lg-6  w-100 justify-content-center" aria-label="nav bar list" role="navigation">
-                          <div class="nav-item col-lg-2 col-12 ">
+                        <div class="d-flex col-lg-7  navbar-nav  w-100 justify-content-lg-around" aria-label="nav bar list" role="navigation">
+                          <div class="nav-item col-lg-3 col-12 ">
                             <a class="btn active text-light w-100 btn-outline-dark rounded-0" aria-current="true" href="../review.html">Review </a>
                           </div>
         
@@ -55,29 +55,29 @@
                             Account actions
                             </button>
         
-                            <div class="dropdown-menu w-100" aria-labelledby="account-actions-menu">
+                            <div class="dropdown-menu w-100 " aria-labelledby="account-actions-menu">
         
                         
-                          <div class="dropdown-item col-lg-4  col-12">
-                            <button class="btn  w-100 btn-outline-dark rounded-0"  type="button" data-bs-toggle="modal" data-bs-target="#add_business_modal">Add business</button>
+                          <div class="dropdown-item w-100  col-12">
+                            <button class="btn  w-100 btn-outline-dark rounded-0"  type="button" data-bs-toggle="modal" data-bs-target="#add-business_modal">Add business</button>
                           </div>
                           
-                          <div class="dropdown-item col-lg-4  col-12">
+                          <div class="dropdown-item w-100  col-12">
                             <button class="btn w-100 btn-outline-dark rounded-0" type="button" data-bs-toggle="modal" data-bs-target="#sign-up_modal">Sign up</button>
         
                           </div>
         
                         
-                          <div class="dropdown-item col-lg-4  col-12">
+                          <div class="dropdown-item w-100  col-12">
                             <button class="btn  w-100 btn-outline-dark rounded-0"  type="button" data-bs-toggle="modal" data-bs-target="#Login_modal">Login</button>
                           </div>   
-                          <div class="dropdown-item col-lg-4  col-12">
+                          <div class="dropdown-item w-100   col-12">
                             <button class="btn w-100 btn-outline-dark rounded-0" type="button" data-bs-toggle="modal" data-bs-target="#sign-out_modal">Sign out</button>
                         
                           </div>
                           </div>
                         </div>
-                          <div class="nav-item col-lg-2 col-12">
+                          <div class="nav-item col-lg-3 col-12">
                             <a class="btn w-100 btn-outline-dark rounded-0"  href="../help.html">Help </a>
                           </div>
                         
