--- a/client/src/components/main.html
+++ b/client/src/components/main.html
@@ -19,112 +19,30 @@
 
                               <!--  Main section with some accessibility --> 
 
- <main class = "row d-flex flex-column align-self-center align-items-center bg-secondary p-1 justify-content-center ">
+ <main class = "row d-flex flex-column align-self-center align-items-center bg-secondary p-1 justify-content-start  min-vh-100">
              
   <!--  banner general--> 
-  <div class=" bg-light p-1  col-12 col-sm-12  align-self-center align-items-center" aria-label="banner" role="banner">
-    <header class="row">
+  <div class=" bg-light p-1  col-12 col-sm-12  align-self-center align-items-center  mt-5 " aria-label="banner" role="banner">
+    <header class="d-flex flex-column col-12 p-1 align-self-center align-items-center">
 
-      <!--  Main navigation with some accessibility --> 
-  
-              <nav
-                class="
-                  navbar navbar-expand-lg navbar-light
-                  bg-light
-                  d-flex
-                  nav-pills 
-                  w-100
-                " 
-              >
-              
-              <div class="d-flex flex-row col-lg-2 col-12 justify-content-between " >
-  
-                <a class="navbar-brand" href="../index.html">Restaurant System</a>
-                <button
-                  class="navbar-toggler"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#navbar_menu-actions"
-                >
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-  
-              </div>
-          
-  
-                <div class="collapse navbar-collapse mt-2 mt-lg-0   " id="navbar_menu-actions">
-                  
-                  <div class="d-flex col-lg-7  navbar-nav  w-100 justify-content-lg-around" aria-label="nav bar list" role="navigation">
-                    <div class="nav-item col-lg-3 col-12 ">
-                      <a class="btn active text-light w-100 btn-outline-dark rounded-0" aria-current="true" href="../review.html">Review </a>
-                    </div>
-  
-                  <!-- dropdown menu for account actions--> 
-  
-  
-                    <div class="dropdown col-lg-4 col-12 " id="account-actions-menu" aria-label="account actions dropdowm" role="menu">
-                      <button class="btn btn-outline-dark rounded-0 dropdown-toggle w-100" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Account actions
-                      </button>
-  
-                      <div class="dropdown-menu w-100 " aria-labelledby="account-actions-menu">
-  
-                  
-                    <div class="dropdown-item w-100  col-12">
-                      <button class="btn  w-100 btn-outline-dark rounded-0"  type="button" data-bs-toggle="modal" data-bs-target="#add-business_modal">Add business</button>
-                    </div>
-                    
-                    <div class="dropdown-item w-100  col-12">
-                      <button class="btn w-100 btn-outline-dark rounded-0" type="button" data-bs-toggle="modal" data-bs-target="#sign-up_modal">Sign up</button>
-  
-                    </div>
-  
-                  
-                    <div class="dropdown-item w-100  col-12">
-                      <button class="btn  w-100 btn-outline-dark rounded-0"  type="button" data-bs-toggle="modal" data-bs-target="#Login_modal">Login</button>
-                    </div>   
-                    <div class="dropdown-item w-100   col-12">
-                      <button class="btn w-100 btn-outline-dark rounded-0" type="button" data-bs-toggle="modal" data-bs-target="#sign-out_modal">Sign out</button>
-                  
-                    </div>
-                    </div>
-                  </div>
-                    <div class="nav-item col-lg-3 col-12">
-                      <a class="btn w-100 btn-outline-dark rounded-0"  href="../help.html">Help </a>
-                    </div>
-                  
-                  
-                  </div>
-  
-              
-                </div>
-                  <!--  Search bar for finding restaurants --> 
-                <form class="form-inline d-flex flex-row col-lg-4 col-12 mt-lg-0 mt-1 " aria-label="search by name section" role="search">
-                  <label for="main-search" class="d-none">Restaurant search name </label>
-                  <input
-                  id = "main-search"
-                    class="form-control rounded-0 rounded-0 rounded-start " 
-                    type="search"
-                  placeholder="Restaurant search name"
-                    aria-label="Enter a restaurant name"
-                  />
-                  <button class="btn btn-dark rounded-0 rounded-end" type="submit">Search</button>
-                  </form>
-              </nav>
-  
-  </header>   
+        <h1 class="display-4 bg-black text-light text-center col-12 p-2">[Insert title]</h1>
+
+        <h6 class="bg-secondary text-light text-center col-10 p-1" aria-label="Welcome login message" >Welcome user[insert username] or Guest</h6> 
+
+    </header>    
 </div>
 
-    <!--  banner general--> 
-    <div class="d-flex bg-light p-1  col-12  align-self-center flex-column" aria-label="banner" role="banner">
-        <header class="d-flex flex-column col-12 p-1 align-self-center align-items-center">
-            <h1 class="display-4 bg-black text-light p-2 text-center col-12 fw-bold">Restaurant Review System</h1>
-            <h6 class="bg-secondary text-light text-center col-10 p-1">Welcome user[insert username] or Guest</h6> 
+    <!--  home general--> 
+    <div class="d-flex bg-light p-1  col-12 mt-5 flex-column" aria-label="banner" role="banner">
+      <header class="d-flex flex-column col-12 p-1 align-self-center align-items-center">
+          <h1 class="display-4 bg-black text-light p-2 text-center col-12 fw-bold">Restaurant Review System</h1>
+          <h6 class="bg-secondary text-light text-center col-10 p-1">Welcome user[insert username] or Guest</h6> 
 
-         </header>
+       </header>
 
-        <p class="lead display-6 bg-black text-light p-1 text-center col-10 align-self-center">Create and read reviews </p>
+      <p class="lead display-6 bg-black text-light p-1 text-center col-10 align-self-center">Create and read reviews </p>
 
-    </div>
+  </div>
           
  </main>
 
