struct: pages to src root & feat: empty headr-main

--- a/client/src/components/header.html
+++ b/client/src/components/header.html
@@ -88,7 +88,7 @@
               </div>
                 <!--  Search bar for finding restaurants --> 
               <form class="form-inline d-flex flex-row col-lg-4 col-12  mt-1" aria-label="search by name section" role="search">
-                <label for="main-search" class="d-none">Restaurant search by name input</label>
+                <label for="main-search" class="d-none">Restaurant search name </label>
                 <input
                 id = "main-search"
                   class="form-control rounded-0 rounded-0 rounded-start " 
