--- a/client/src/components/login-modal.html
+++ b/client/src/components/login-modal.html
@@ -146,10 +146,10 @@
 
         <form class="w-100 d-flex flex-column align-items-center">
             <label for="username-login" class="d-none m-1">Enter username into text box</label>
-            <input id="username-login"  class="w-100 m-1 rounded-1" name="username-input" type="text" placeholder="Username" type="input" required minlength="1" maxlength="300" />
+            <input id="username-login"  class="w-100 m-1 rounded-1" name="username-input" type="text" placeholder="Username"  required minlength="1" maxlength="300" />
             
             <label for="password-login" class="d-none m-1">Enter password into text box</label>
-            <input id="password-login" class="w-100 m-1 rounded-1" name="password-input"  type="text"  placeholder="Password" type="input" required minlength="1" maxlength="300" />
+            <input id="password-login" class="w-100 m-1 rounded-1" name="password-input"  type="text"  placeholder="Password"  required minlength="1" maxlength="300" />
         
             <button id="submit-login" class="btn btn-dark rounded-0 w-100 m-1 btn-success" type="submit">Submit</button>
 
