--- a/client/src/components/main.html
+++ b/client/src/components/main.html
@@ -1,5 +1,4 @@
-    
-<!-- main component with dependencies --> 
+<!-- main component with dependencies -->
 
 <!DOCTYPE html>
 <html lang="en-gb">
@@ -12,43 +11,109 @@
     <script src="../js/bootstrap.bundle.js"></script>
   </head>
   <body>
- <div class="container-fluid" aria-label="Restaurant review system application" role="application">
-        
-        
-        
+    <div
+      class="container-fluid"
+      aria-label="Restaurant review system application"
+      role="application"
+    >
+      <!--  Main section with some accessibility -->
 
-                              <!--  Main section with some accessibility --> 
+      <main
+        class="
+          row
+          d-flex
+          flex-column
+          align-self-center align-items-center
+          bg-secondary
+          p-1
+          justify-content-start
+          min-vh-100
+        "
+      >
+        <!--  banner general-->
+        <div
+          class="
+            bg-light
+            p-1
+            col-12 col-sm-12
+            align-self-center align-items-center
+            mt-5
+          "
+          aria-label="banner"
+          role="banner"
+        >
+          <header
+            class="
+              d-flex
+              flex-column
+              col-12
+              p-1
+              align-self-center align-items-center
+            "
+          >
+            <h1 class="display-4 bg-black text-light text-center col-12 p-2">
+              [Insert title]
+            </h1>
 
- <main class = "row d-flex flex-column align-self-center align-items-center bg-secondary p-1 justify-content-start  min-vh-100">
-             
-  <!--  banner general--> 
-  <div class=" bg-light p-1  col-12 col-sm-12  align-self-center align-items-center  mt-5 " aria-label="banner" role="banner">
-    <header class="d-flex flex-column col-12 p-1 align-self-center align-items-center">
+            <h6
+              class="bg-secondary text-light text-center col-10 p-1"
+              aria-label="Welcome login message"
+            >
+              Welcome user[insert username] or Guest
+            </h6>
+          </header>
+        </div>
 
-        <h1 class="display-4 bg-black text-light text-center col-12 p-2">[Insert title]</h1>
+        <!--  home general-->
+        <div
+          class="d-flex bg-light p-1 col-12 mt-5 flex-column"
+          aria-label="banner"
+          role="banner"
+        >
+          <header
+            class="
+              d-flex
+              flex-column
+              col-12
+              p-1
+              align-self-center align-items-center
+            "
+          >
+            <h1
+              class="
+                display-4
+                bg-black
+                text-light
+                p-2
+                text-center
+                col-12
+                fw-bold
+              "
+            >
+              Restaurant Review System
+            </h1>
+            <p
+              class="
+                lead
+                display-6
+                bg-black
+                text-light
+                p-1
+                text-center
+                col-10
+              "
+            >
+              Create and read reviews
+            </p>
+          </header>
 
-        <h6 class="bg-secondary text-light text-center col-10 p-1" aria-label="Welcome login message" >Welcome user[insert username] or Guest</h6> 
-
-    </header>    
-</div>
-
-    <!--  home general--> 
-    <div class="d-flex bg-light p-1  col-12 mt-5 flex-column" aria-label="banner" role="banner">
-      <header class="d-flex flex-column col-12 p-1 align-self-center align-items-center">
-          <h1 class="display-4 bg-black text-light p-2 text-center col-12 fw-bold">Restaurant Review System</h1>
-          <h6 class="bg-secondary text-light text-center col-10 p-1">Welcome user[insert username] or Guest</h6> 
-
-       </header>
-
-      <p class="lead display-6 bg-black text-light p-1 text-center col-10 align-self-center">Create and read reviews </p>
-
-  </div>
-          
- </main>
-
- </div> 
+          <h6 class="bg-secondary text-light text-center col-10 p-1  align-self-center
+          ">
+            Welcome user[insert username] or Guest
+          </h6>
+        </div>
+      </main>
+    </div>
     <script src="../js/jscript.js"></script>
-
- </body>
-
+  </body>
 </html>
