feat: signup-modal 1 class input & style rounded-1

--- a/client/src/components/sign-up-modal.html
+++ b/client/src/components/sign-up-modal.html
@@ -145,13 +145,13 @@
 
           <form class="w-100 d-flex flex-column align-items-center">
              <label for="username-sign-up" class="d-none m-1">Enter username into text box</label>
-             <input id="username-sign-up"  class="w-100 m-1" name="username-input" type="text"  class="rounded-3" placeholder="Username" type="input" required minlength="1" maxlength="300" >
+             <input id="username-sign-up"  class="w-100 m-1 rounded-1" name="username-input" type="text"   placeholder="Username"  required minlength="1" maxlength="300" >
              
              <label for="password-1-sign-up" class="d-none m-1">Enter password into text box</label>
-             <input id="password-1-sign-up" class="w-100 m-1" name="password-input" type="text"   class="rounded-2" placeholder="Enter password" type="input" required minlength="1" maxlength="300" >
+             <input id="password-1-sign-up" class="w-100 m-1 rounded-1" name="password-input" type="text"    placeholder="Enter password"  required minlength="1" maxlength="300" >
          
              <label for="password-2-sign-up" class="d-none m-1">Confirm by re-entering password into text box</label>
-             <input id="password-2-sign-up" class="w-100 m-1" name="password-input" type="text"  class="rounded-2" placeholder="Confirm password" type="input" required minlength="1" maxlength="300" >
+             <input id="password-2-sign-up" class="w-100 m-1 rounded-1" name="password-input" type="text" placeholder="Confirm password" required minlength="1" maxlength="300" >
 
              <button id="submit-sign-up" class="btn btn-dark rounded-0 w-100 m-1 btn-success" type="submit">Submit</button>
 
