--- a/client/src/components/header-main-modals.html
+++ b/client/src/components/header-main-modals.html
@@ -241,6 +241,52 @@
     
   </div>
 
+ <!-- Sign up template -->
+ <div class="modal" id="sign-up_modal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+  
+        <div class="modal-header">
+        
+        <button type="button" class="btn btn-dark text-light " data-bs-dismiss="modal">Close
+          </button>
+          <h5 class="modal-title">Sign up</h5>
+          
+        </div>
+<div class="modal-body col-12 d-flex flex-column ">
+
+         <form class="w-100 d-flex flex-column align-items-center">
+            <label for="username-sign-up" class="d-none m-1">Enter username into text box</label>
+            <input id="username-sign-up"  class="w-100 m-1 rounded-1" name="username-input" type="text"   placeholder="Username"  required minlength="1" maxlength="300" >
+            
+            <label for="password-1-sign-up" class="d-none m-1">Enter password into text box</label>
+            <input id="password-1-sign-up" class="w-100 m-1 rounded-1" name="password-input" type="text"    placeholder="Enter password"  required minlength="1" maxlength="300" >
+        
+            <label for="password-2-sign-up" class="d-none m-1">Confirm by re-entering password into text box</label>
+            <input id="password-2-sign-up" class="w-100 m-1 rounded-1" name="password-input" type="text" placeholder="Confirm password" required minlength="1" maxlength="300" >
+
+            <button id="submit-sign-up" class="btn btn-dark rounded-0 w-100 m-1 btn-success" type="submit">Submit</button>
+
+        </form>
+
+        <div class="alert alert-success" role="alert">
+         Success: You have created an account
+       </div>
+
+       <div class="alert alert-danger" role="alert">
+         Error: the account already exists
+       </div>
+        </div>
+  
+        <div class="modal-footer">
+             Have an account? <a href="login-modal.html">Login here!</a>
+        </div>
+  
+      </div>
+    </div>
+
+    
+  </div>
  <!-- Login template -->
  <div class="modal" id="Login_modal">
     <div class="modal-dialog">
@@ -248,7 +294,7 @@
   
         <div class="modal-header">
         
-        <button type="button" class="btn btn-dark text-light " data-bs-dismiss="modal">Close
+        <button type="button" class="btn btn-dark text-light" data-bs-dismiss="modal">Close
           </button>
           <h5 class="modal-title">Login</h5>
           
