feat: aria roles in components inc add-business-m

--- a/client/src/components/add-business-modal.html
+++ b/client/src/components/add-business-modal.html
@@ -239,11 +239,11 @@
 
           
 
-            <div class="alert alert-success " aria-label="success alert">
+            <div class="alert alert-success " aria-label="success alert" role="alert">
               Success: You have added a new business to review.
             </div>
 
-            <div class="alert alert-faliure " aria-label="error alert">
+            <div class="alert alert-faliure " aria-label="error alert" role="alert">
               Error: Business name wasn't added because it already exists.
             </div>
           </div>
