--- a/client/src/components/login-modal.html
+++ b/client/src/components/login-modal.html
@@ -109,7 +109,7 @@
       
               <h1 class="display-4 bg-black text-light text-center col-12 p-2">[Insert title]</h1>
       
-              <h6 class="bg-secondary text-light text-center col-10 p-1" aria-label="Welcome login message" role="Welcome">Welcome user[insert username] or Guest</h6> 
+              <h6 class="bg-secondary text-light text-center col-10 p-1" aria-label="Welcome login message">Welcome user[insert username] or Guest</h6> 
       
           </header>    
       </div>
@@ -155,7 +155,7 @@
 
 
         </form>
-            <div class="alert alert-danger w-100" role="alert">
+            <div class="alert alert-danger w-100 d-none" role="alert" aria-label="Login information incorrect">
               Error: Login username/password not correct
             </div>
         </div>
