Added link to sign out that opens login modal

--- a/client/src/components/header-main.html
+++ b/client/src/components/header-main.html
@@ -50,29 +50,29 @@
                     <!-- dropdown menu for account actions--> 
     
     
-                      <div class="dropdown col-lg-4 col-12 " id="account-actions-menu" aria-label="account actions dropdowm" role="menu">
+                      <div class="dropdown col-lg-4 col-12" id="account-actions-menu" aria-label="account actions drop dropdown" role="menu">
                         <button class="btn btn-outline-dark rounded-0 dropdown-toggle w-100" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Account actions
                         </button>
     
-                        <div class="dropdown-menu w-100 " aria-labelledby="account-actions-menu">
+                        <div class="dropdown-menu w-100" aria-labelledby="account-actions-menu">
     
                     
-                      <div class="dropdown-item w-100  col-12">
+                      <div class="dropdown-item w-100 col-12">
                         <button class="btn  w-100 btn-outline-dark rounded-0"  type="button" data-bs-toggle="modal" data-bs-target="#add-business_modal">Add business</button>
                       </div>
                       
-                      <div class="dropdown-item w-100  col-12">
+                      <div class="dropdown-item w-100 col-12">
                         <button class="btn w-100 btn-outline-dark rounded-0" type="button" data-bs-toggle="modal" data-bs-target="#sign-up_modal">Sign up</button>
     
                       </div>
     
                     
-                      <div class="dropdown-item w-100  col-12">
+                      <div class="dropdown-item w-100 col-12">
                         <button class="btn  w-100 btn-outline-dark rounded-0"  type="button" data-bs-toggle="modal" data-bs-target="#Login_modal">Login</button>
                       </div>   
-                      <div class="dropdown-item w-100   col-12">
-                        <button class="btn w-100 btn-outline-dark rounded-0" type="button" data-bs-toggle="modal" data-bs-target="#sign-out_modal">Sign out</button>
+                      <div class="dropdown-item w-100 col-12">
+                        <button class="btn w-100 btn-outline-dark rounded-0" type="button" data-bs-toggle="modal" data-bs-target="#Login_modal">Sign out</button>
                     
                       </div>
                       </div>
