styling: hidden error msg & red alert when visible

--- a/client/src/components/sign-up-modal.html
+++ b/client/src/components/sign-up-modal.html
@@ -169,7 +169,7 @@
        Success: You have created an account
      </div>
 
-     <div class="alert alert-dange d-noner" role="alert" aria-label="error alert"  aria-hidden="true">
+     <div class="alert alert-danger d-none" role="alert" aria-label="error alert"  aria-hidden="true">
        Error: the account already exists
      </div>
       </div>
