style: header even menu & margin in relevant html

--- a/client/src/components/add-business-modal.html
+++ b/client/src/components/add-business-modal.html
@@ -44,17 +44,17 @@
               </div>
           
   
-                <div class="collapse navbar-collapse mt-2 mt-lg-0   " id="navbar_menu-actions">
+                <div class="collapse navbar-collapse mt-2 mt-1 mt-lg-0" id="navbar_menu-actions">
                   
                   <div class="d-flex col-lg-7  navbar-nav  w-100 justify-content-lg-around" aria-label="nav bar list" role="navigation">
-                    <div class="nav-item col-lg-3 col-12 ">
+                    <div class="nav-item col-lg-4 col-12 ">
                       <a class="btn active text-light w-100 btn-outline-dark rounded-0" aria-current="true" href="../review.html">Review </a>
                     </div>
   
                   <!-- dropdown menu for account actions--> 
   
   
-                    <div class="dropdown col-lg-4 col-12" id="account-actions-menu" aria-label="account actions drop dropdown" role="menu">
+                    <div class="dropdown col-lg-4 col-12 mt-1 mt-lg-0" id="account-actions-menu" aria-label="account actions drop dropdown" role="menu">
                       <button class="btn btn-outline-dark rounded-0 dropdown-toggle w-100" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Account actions
                       </button>
@@ -81,7 +81,7 @@
                     </div>
                     </div>
                   </div>
-                    <div class="nav-item col-lg-3 col-12">
+                    <div class="nav-item col-lg-4 col-12 mt-1 mt-lg-0">
                       <a class="btn w-100 btn-outline-dark rounded-0"  href="../help.html">Help </a>
                     </div>
                   
@@ -91,7 +91,7 @@
               
                 </div>
                   <!--  Search bar for finding restaurants --> 
-                <form class="form-inline d-flex flex-row col-lg-4 col-12 mt-lg-0 mt-1 " aria-label="search by name section" role="search">
+                <form class="form-inline d-flex flex-row col-lg-4 col-12 mt-lg-0 mt-1 ms-lg-3" aria-label="search by name section" role="search">
                   <label for="main-search" class="d-none">Restaurant search name </label>
                   <input
                   id = "main-search"
